updatd to Infrastructure Intelligence Platform

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ __pycache__/
 
 # C extensions
 *.so
+
+# Datasets directory (large files - GPR data, images, processed files)
+# Contains University of Twente GPR dataset (~400MB) and other large datasets
+datasets/
 datasets/*
 
 # Distribution / packaging
@@ -199,3 +203,39 @@ cython_debug/
 
 # macOS
 .DS_Store
+
+# Environment variables (NEVER commit!)
+.env
+.env.local
+.env.*.local
+
+# Docker volumes and data
+data/
+!data/.gitkeep
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/build/
+
+# Logs
+*.log
+logs/
+backend/logs/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
