--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,10 @@ psycopg2-binary==2.9.9
 alembic==1.13.1
 redis==5.0.1
 
+# Task Queue
+celery==5.3.4
+flower==2.0.1
+
 # Vector Database and Embeddings
 chromadb==0.4.18
 pinecone-client==2.2.4
@@ -58,6 +62,13 @@ shapely==2.0.2
 pyproj==3.6.1
 rasterio==1.3.9
 folium==0.15.1
+pyogrio==0.7.2          # Modern shapefile reader (replaces Fiona)
+
+# Point Cloud Processing (for HS2 Progress Verification)
+open3d==0.18.0          # 3D data processing, point cloud algorithms
+laspy==2.5.3            # LAS/LAZ file format (LiDAR data)
+lazrs==0.6.1            # LAZ compression support
+plyfile==1.0.3          # PLY file format support
 
 # Natural Language Processing
 openai==1.3.7
