--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,28 +14,41 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
+    "@reduxjs/toolkit": "^2.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "@types/leaflet": "^1.9.21",
+    "@types/three": "^0.181.0",
+    "axios": "^1.6.0",
+    "date-fns": "^2.30.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "@reduxjs/toolkit": "^2.0.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.0.0",
-    "axios": "^1.6.0"
+    "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.0",
+    "three": "^0.160.1",
+    "web-ifc-three": "^0.0.46"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^14.1.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "typescript": "^5.3.0",
-    "vite": "^5.0.0",
-    "eslint": "^8.55.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^1.0.0",
+    "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "prettier": "^3.1.0",
-    "vitest": "^1.0.0",
-    "@vitest/ui": "^1.0.0",
-    "@testing-library/react": "^14.1.0",
-    "@testing-library/jest-dom": "^6.1.0"
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0"
   }
 }
