--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "@mui/material": "^5.14.0",
     "@reduxjs/toolkit": "^2.0.0",
     "@tanstack/react-query": "^5.0.0",
+    "@types/d3": "^7.4.3",
     "@types/leaflet": "^1.9.21",
     "@types/three": "^0.181.0",
     "axios": "^1.6.0",
+    "d3": "^7.9.0",
     "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
