--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -47,6 +47,10 @@ openpyxl==3.1.2
 ezdxf==1.1.4           # For DXF files
 # Note: DWG support requires proprietary libraries
 
+# BIM/IFC Processing
+ifcopenshell==0.8.4     # IFC file parsing and manipulation (updated to available version)
+# pythonocc-core==7.7.2   # 3D CAD kernel - DISABLED: Complex dependencies, install separately if needed
+
 # Web Scraping and Data Download
 requests==2.31.0
 beautifulsoup4==4.12.2
@@ -57,6 +61,10 @@ urllib3==2.1.0
 Pillow==10.1.0
 opencv-python==4.8.1.78
 
+# Hyperspectral Imaging
+spectral==0.23.1        # Hyperspectral image processing library
+scikit-image==0.22.0    # Image processing algorithms
+
 # Geospatial Data Processing
 geopandas==0.14.1
 shapely==2.0.2
@@ -64,6 +72,8 @@ pyproj==3.6.1
 rasterio==1.3.9
 folium==0.15.1
 pyogrio==0.7.2          # Modern shapefile reader (replaces Fiona)
+geoalchemy2==0.14.3     # PostGIS integration for SQLAlchemy
+gdal==3.8.3             # GDAL bindings for raster/vector operations
 
 # Point Cloud Processing (for HS2 Progress Verification)
 open3d==0.18.0          # 3D data processing, point cloud algorithms
