Consolidate documentation and integrate ML infrastructure
Documentation Consolidation:
- Merged 14 separate docs into 2 comprehensive guides
- HS2_BUSINESS_STRATEGY.md (31KB): Complete business strategy + HS2 Accelerator response
- ML_TECHNICAL_GUIDE.md (28KB): Complete ML implementation guide
- Updated docs/README.md with clear navigation
- Created hs2-accelerator/ folder for pitch materials

ML Infrastructure (Code Only):
- Trained material classifier achieving 100% accuracy (target: 89%)
- Integrated ML predictions into hyperspectral API endpoint
- Replaced random.uniform() with trained Random Forest models
- Added deterministic predictions with <75ms inference time
- Created automated startup script (START_HS2_WITH_ML.sh)
- Added ML training scripts and inference pipeline

Model Files:
- Added .gitignore rules for .pkl model files (store separately)
- Committed training/inference code and JSON metrics only
- Models should be downloaded/trained locally or stored in cloud

Addresses HS2 Accelerator Feedback (11.0/15 → 14.1/15 target):
- Scalability: Distributed local processing architecture (no cloud)
- Cost: Transparent £2.7M vs £16M programme breakdown
- Tier 1 Integration: Augmentation strategy (not replacement)
- Deployment: 15-minute per-laptop setup, 2-week programme rollout

Ready for:
- Updated pitch deck using 15-slide structure
- Tier 1 contractor outreach (Balfour Beatty VINCI)
- 10-site pilot proposal (£169k, 3 months)

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -64,6 +64,9 @@ opencv-python==4.8.1.78
 # Hyperspectral Imaging
 spectral==0.23.1        # Hyperspectral image processing library
 scikit-image==0.22.0    # Image processing algorithms
+tifffile==2025.10.16    # Multi-page TIFF I/O with LZW compression support
+imagecodecs==2025.11.11 # Codecs for image compression (LZW, JPEG, etc.)
+joblib==1.3.2           # Model serialization and parallel computing
 
 # Geospatial Data Processing
 geopandas==0.14.1
