Add ML models README and update .gitignore
- Added README.md in ml_artifacts/models/ explaining:
  * Why .pkl files are excluded from git
  * How to train models locally (3.5 seconds)
  * How to verify models work correctly
  * Model performance metrics (100% accuracy)
  * Alternative download options

- Updated .gitignore to exclude ML model files:
  * *.pkl, *.h5, *.pt, *.pth, *.onnx
  * Prevents committing large binary files
  * Keeps repository size manageable

Models must be trained locally or downloaded from cloud storage

--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,17 @@ Thumbs.db
 *.tmp
 *.temp
 .cache/
+
+# ML Models (large binary files)
+# These are trained models that should not be committed to git
+# Store them in cloud storage or model registry instead
+*.pkl
+*.h5
+*.pt
+*.pth
+*.onnx
+ml_artifacts/models/*.pkl
+ml_artifacts/models/*.h5
+ml_artifacts/models/*.pt
+ml_artifacts/models/*.pth
+ml_artifacts/models/*.onnx
