--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,12 +25,12 @@ pinecone-client==2.2.4
 sentence-transformers==2.2.2
 
 # Machine Learning and Data Science
-numpy==1.25.2
-pandas==2.1.4
-scikit-learn==1.3.2
-scipy==1.11.4
-matplotlib==3.8.2
-seaborn==0.13.0
+numpy==2.2.6            # Updated to match ML model training environment
+pandas==2.2.3           # Updated to support numpy 2.x
+scikit-learn==1.5.1     # Updated to match ML model training environment
+scipy==1.14.1           # Updated for numpy 2.x compatibility
+matplotlib==3.9.4       # Updated for numpy 2.x compatibility
+seaborn==0.13.2
 
 # GPR Data Processing
 obspy==1.4.0           # For SEG-Y files
@@ -70,11 +70,11 @@ joblib==1.3.2           # Model serialization and parallel computing
 
 # Geospatial Data Processing
 geopandas==0.14.1
-shapely==2.0.2
+shapely==2.0.6           # Updated for numpy 2.x compatibility
 pyproj==3.6.1
 rasterio==1.3.9
 folium==0.15.1
-pyogrio==0.7.2          # Modern shapefile reader (replaces Fiona)
+pyogrio>=0.12.0         # Modern shapefile reader (numpy 2.x compatible)
 geoalchemy2==0.14.3     # PostGIS integration for SQLAlchemy
 gdal==3.8.3             # GDAL bindings for raster/vector operations
 
@@ -136,7 +136,7 @@ xlsxwriter==3.1.9
 reportlab==4.0.7
 
 # Scientific Computing (for GPR signal processing)
-matplotlib==3.8.2
+# matplotlib already defined in "Machine Learning and Data Science" section
 plotly==5.17.0
 
 # Time Series Analysis
